<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".rectangleView">

    <ImageView
        android:id="@+id/shapeIV2"
        android:layout_width="245dp"
        android:layout_height="214dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV2"
        app:srcCompat="@drawable/triangle" />

    <EditText
        android:id="@+id/firstValueETN4"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV4" />

    <EditText
        android:id="@+id/secondValueETN4"
        android:layout_width="288dp"
        android:layout_height="54dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/width"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstValueETN4" />

    <EditText
        android:id="@+id/thirdValueETN"
        android:layout_width="288dp"
        android:layout_height="54dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/width"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondValueETN4" />

    <TextView
        android:id="@+id/titleTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rectangleTitle"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultTV4"
        android:layout_width="299dp"
        android:layout_height="79dp"
        android:layout_marginTop="28dp"
        android:text="@string/pendientArea"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeIV2" />

    <Button
        android:id="@+id/calcBtn4"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/celurean"
        android:text="Area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/periBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/celurean"
        android:text="Perimetro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>